--- a/assets/event-stack/css/style.css
+++ b/assets/event-stack/css/style.css
@@ -1139,7 +1139,7 @@ header {}
 .top-movie-carousel {}
 
 .single-top-movie {
-    /*border:1px dotted #17203d;*/
+    border:1px solid #ebebeb;
     /*border-radius: 5px;*/
     position: relative;
     -webkit-transition: all 0.3s ease 0s;
@@ -1310,7 +1310,7 @@ header {}
     text-align: center;
     z-index: 8;
     /*background: #333;*/
-    border:1px solid #ebebeb;
+    /*border:1px solid #ebebeb;*/
     border-top:0px solid #ebebeb;
     min-height: 200px;
 }
