Auto stash before merge of "master" and "origin/master"

--- a/assets/K003/css/style.css
+++ b/assets/K003/css/style.css
@@ -34,8 +34,8 @@
  # 1. Improting Styles
  =========================*/
 
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,800,700,600);
-@import url(http://fonts.googleapis.com/css?family=Lobster);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,800,700,600);
+@import url(https://fonts.googleapis.com/css?family=Lobster);
 @import url('font-awesome.min.css');
 @import url('animate.css');
 @import url('prettyPhoto.css');
